# products

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
docs/autoservices/: algorithms.adoc
docs/customers/: algorithms.adoc
docs/mechanics/: algorithms.adoc
migrations/: __init__.py  env.py  utils.py
migrations/seed/countries/: countries.json
migrations/seed/maintenance/: provided_maintenance_categories.json  provided_maintenance_types.json
migrations/seed/vehicles/: vehicle_brands.json  vehicle_generations.json  vehicle_models.json
migrations/versions/: 202507_25_initial_2fd772137e82.py  202507_27_autoservice_manage_provided_maintenance__c253a144a0e0.py  202507_27_provided_maintenance_associations_7a2008f64b7c.py  202508_22_autoservice_city_5e74c76bc377.py
products/: __init__.py  __main__.py  __version__.py  app.py  settings.py
products/api/: __init__.py
products/api/v1/: __init__.py  autoservice.py  customer.py  maintenance.py  mechanic.py  vehicle.py
products/exceptions/: __init__.py  autoservice.py  base.py  country.py  customer.py  http.py  maintenance.py  mechanic.py  vehicle.py
products/models/: __init__.py  autoservice.py  country.py  customer.py  maintenance.py  mechanic.py  user.py  vehicle.py
products/services/: __init__.py  autoservice.py  country.py  customer.py  maintenance.py  mechanic.py  vehicle.py
products/utils/: __init__.py  user_auth.py
tests/: conftest.py
tests/services/: __init__.py  test_autoservice.py  test_customer.py  test_mechanic.py
